fix button alignment [test-visual]

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -201,4 +201,8 @@
     background: $color-header;
     margin-top: -0.03rem;
   }
+
+  .btn--exit {
+    margin-top: 0.55rem;
+  }
 }
